@@ -1,6 +1,12 @@
 # ChangeLog for Portage; the Gentoo Linux ports system 
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
 
+*portage-1.8.9.4 (01 Apr 2002)
+
+  31 Mar 2002; Daniel Robbins <drobbins@gentoo.org> portage.py: adapted
+  movefile() which should preserves timestamps and ownership on files and
+  symlinks it moves.
+
 *portage-1.8.9.3 (31 Mar 2002)
 
   31 Mar 2002; Daniel Robbins <drobbins@gentoo.org> portage.py: promising
